✨ Wrap heading links instead of using #

--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -44,6 +44,24 @@ pre[data-language] {
   font-size: 1.25rem;
 }
 
+.prose h1 a,
+.prose h2 a,
+.prose h3 a,
+.prose h4 a,
+.prose h5 a,
+.prose h6 a {
+  @apply no-underline font-bold
+}
+
+.prose h1 a:hover,
+.prose h2 a:hover,
+.prose h3 a:hover,
+.prose h4 a:hover,
+.prose h5 a:hover,
+.prose h6 a:hover {
+  @apply underline
+}
+
 code[data-theme],
 pre[data-theme] {
   white-space: pre;
