--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -90,7 +90,7 @@ pre[data-theme] {
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.5;
+  line-height: 1.75;
   tab-size: 4;
   hyphens: none;
 }
@@ -105,7 +105,7 @@ pre[data-language] {
 pre,
 pre[data-theme] {
   font-size: 1rem;
-  padding: 1rem 1.25rem;
+  padding: 1rem 0;
   margin: 0.5rem 0;
   overflow: auto;
   border-radius: 0.35rem;
