--- a/src/utils/theme/theme.css
+++ b/src/utils/theme/theme.css
@@ -2,6 +2,36 @@
 
 @config '../../../tailwind.config.js';
 
+@variant dark (&:is(.dark *));
+
+@theme {
+  --animate-wave: wave 1.2s ease infinite;
+
+  @keyframes wave {
+    0% {
+      transform: rotate(0deg);
+    }
+    10% {
+      transform: rotate(-10deg);
+    }
+    20% {
+      transform: rotate(12deg);
+    }
+    30% {
+      transform: rotate(-10deg);
+    }
+    40% {
+      transform: rotate(9deg);
+    }
+    50% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+}
+
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
@@ -18,6 +48,14 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
   }
+
+  body,
+  html {
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 @utility hide-scrollbar {
@@ -28,16 +66,6 @@
 }
 
 @layer utilities {
-  body,
-  html {
-    background-color: var(--background);
-    color: var(--text);
-    font-size: 16px;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-  }
-
   .language-project-javascript {
     background-color: #fbdd51;
   }
